# tspi-3.1-openharmony

./: ido_patch.sh
ido_base/: ohos.para
ido_build/: compile_standard_whitelist.json  component_compilation_whitelist.json  subsystem_compoents_whitelist.json
ido_build/core/gn/: ohos_exec_script_allowlist.gni
ido_build/ohos/images/: BUILD.gn
ido_build/templates/kernel/: Makefile  ohos_kernel_build.gni
ido_device/board/industio/purple_pi_oh/: BUILD.gn  README_zh.md  ohos.build
ido_device/board/industio/purple_pi_oh/audio_alsa/: vendor_capture.c  vendor_render.c
ido_device/board/industio/purple_pi_oh/audio_drivers/: README.txt
ido_device/board/industio/purple_pi_oh/cfg/: BUILD.gn  ido_setting.sh  init.rk3566.cfg
ido_device/board/industio/purple_pi_oh/kernel/: BUILD.gn  build_kernel.sh
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/: make-boot.sh  make-ohos.sh  rockchip_linux_defconfig
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/dts/: ido-pi-oh3566-hdmi-v1.dts  ido-pi-oh3566-mipi-v1.dts  ido-pi-oh3566-v1.dtsi  tspi-rk3566-core-v10.dtsi  tspi-rk3566-csi-v10.dtsi  tspi-rk3566-dsi-v10.dtsi  tspi-rk3566-edp-v10.dtsi  tspi-rk3566-gmac1-v10.dtsi  tspi-rk3566-hdmi-v10.dtsi  tspi-rk3566-user-v10-linux.dts
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/media/i2c/: Makefile  ov5648.c
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/touchscreen/: Makefile
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/touchscreen/cst128a_cust/: Makefile  touch_cst128a.patch  ts_common.h  ts_config.h  ts_core.c  ts_core.h  ts_i2c.c
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/touchscreen/gt9xx/: Makefile  goodix_tool.c  gt9xx.c  gt9xx.h
ido_device/board/industio/purple_pi_oh/kernel/ido_patch/wifi/bcmdhd_wifi6/: Makefile  dhd_config.c  wl_cfg80211.h
ido_device/board/industio/purple_pi_oh/loader/: config.cfg
ido_device/board/industio/purple_pi_oh/updater/: BUILD.gn
ido_device/board/industio/purple_pi_oh/wifi/bcmdhd_wifi6/: Makefile
ido_device/soc/rockchip/rk3568/hardware/omx_il/: BUILD.gn
ido_device/soc/rockchip/rk3568/hardware/wifi/: BUILD.gn
ido_drivers/hdf_core/framework/model/input/driver/touchscreen/: touch_cst128a.c  touch_cst128a.h  touch_gt911.c
ido_vendor/industio/purple_pi_oh/: config.json  ohos.build  product.gni
ido_vendor/industio/purple_pi_oh/bluetooth/: BCM43430A1.hcd  BUILD.gn  README.txt
ido_vendor/industio/purple_pi_oh/bluetooth/include/: bt_vendor_brcm.h
ido_vendor/industio/purple_pi_oh/bluetooth/src/: hardware.c  hardware.txt
ido_vendor/industio/purple_pi_oh/default_app_config/: BUILD.gn
ido_vendor/industio/purple_pi_oh/etc/: BUILD.gn
ido_vendor/industio/purple_pi_oh/hals/audio/: BUILD.gn
ido_vendor/industio/purple_pi_oh/hals/codec/: BUILD.gn
ido_vendor/industio/purple_pi_oh/hdf_config/khdf/: hdf.hcs
ido_vendor/industio/purple_pi_oh/hdf_config/khdf/device_info/: device_info.hcs
ido_vendor/industio/purple_pi_oh/hdf_config/khdf/input/: .input_config.hcs.swp  input_config.hcs
ido_vendor/industio/purple_pi_oh/hdf_config/uhdf/: BUILD.gn
ido_vendor/industio/purple_pi_oh/preinstall-config/: BUILD.gn
ido_vendor/industio/purple_pi_oh/resourceschedule/: BUILD.gn
ido_vendor/industio/purple_pi_oh/window_config/: BUILD.gn
