# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# 🌹rk3568🌹
ohos_prebuilt_etc("init.rk3568.cfg") {
  source = "init.rk3568.cfg"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("init.rk3568.usb.cfg") {
  source = "init.rk3568.usb.cfg"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.rk3568") {
  source = "fstab.rk3568"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

#🌹rk3566🌹
ohos_prebuilt_etc("init.rk3566.cfg") {
  source = "init.rk3566.cfg"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("init.rk3566.usb.cfg") {
  source = "init.rk3566.usb.cfg"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.rk3566") {
  source = "fstab.rk3566"
  part_name = "rockchip_products"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("ido_setting") {
  source = "ido_setting.sh"
  install_images = [ chipset_base_dir ]
  part_name = "rockchip_products"
  install_enable = true
}

group("init_configs") {
  deps = [
# 🌹rk3568🌹
#    ":fstab.rk3568",
#   ":init.rk3568.cfg",
#   ":init.rk3568.usb.cfg",

#🌹rk3566🌹
    ":fstab.rk3566",
    ":init.rk3566.cfg",
    ":init.rk3566.usb.cfg",
    ":ido_setting",
  ]
}
